{{$NEXT}}

    - Merge Test2 into the Test-Simple dist
    - Remove experimental status
    - Update copyright dates
    - Better error messages when using Carp in Hashbase init()
    - Document 2 methods on Events
    - Fix Test2 #17 (typo fix in docs)

*****************************************************************************
*                                                                           *
* BELOW THIS POINT ARE THE SEPERATE CHANGELONGS FOR Test-Simple, Test2, AND *
* Test-Stream.                                                              *
*                                                                           *
*****************************************************************************

Test-Simple 1.302013_019 2016-04-13 20:23:18-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Expand no_numbers support to custom formatters

Test-Simple 1.302013_018 2016-04-07 21:23:03-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Support Test2 using an alternative formatter

Test-Simple 1.302013_017 2016-04-05 11:13:50-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Support subtest identification for events
    - Bump minimum Test2 version

Test-Simple 1.302013_016 2016-04-04 21:33:20-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Support some newer event features from Test2
    - Bump minimum Test2 version

Test-Simple 1.302013_015 2016-03-29 09:24:10-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Bump minimum Test2 version to protect from segv

Test-Simple 1.302013_014 2016-03-08 10:00:50-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Skip test added in last release when threading is not avilable

Test-Simple 1.302013_013 2016-03-08 09:19:39-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Test::Builder->reset now resets hub's idea of root pid/tid (#637)

Test-Simple 1.302013_012 2016-01-28 20:38:16-08:00 America/Los_Angeles (TRIAL RELEASE)

    - $Level effects all contexts once Test::Builder is loaded
    - Requires Test2 0.000023
